# npblob

./: .gitignore  AGENTS.md  noxfile.py  pyproject.toml
.github/workflows/: publish.yml
python/: .gitignore  README.md  noxfile.py  pyproject.toml
python/npblob/: encode.py
typescript/: .npmignore  README.md  biome.json  bun.lockb  bunfig.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
typescript/src/: index.ts  npBlob.ts  npblob.ts  types.ts  utils.ts
typescript/test/: index.test.ts  npblob.test.ts
