[project]
name = "npblob"
description = "Transfer numpy array between Python and JavaScript/TypeScript"
readme = "README.md"
authors = [{ name = "Leavers" }]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: JavaScript",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
keywords = ["data", "ndarray", "numpy"]
requires-python = ">=3.8"
dependencies = ["numpy"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/leavers/npblob"
# documentation = "URL of documentation"
# changelog = "URL of changelog"

[project.optional-dependencies]
dev = [
  "autoflake",
  "bumpver",
  "isort",
  "mypy",
  "nox",
  "pytest",
  "pytest-cov",
  "ruff",
]
pylsp = [
  "python-lsp-server[all]",
  "pylsp-mypy",
  "pylsp-rope",
  "python-lsp-ruff",
  "pyls-isort",
  "python-lsp-black",
]

[build-system]
requires = ["setuptools >= 65.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["npblob*"]
exclude = ["examples*", "tests*"]

[tool.setuptools.package-data]
"npblob" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "npblob.__version__" }

[tool.bumpver]
# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --major
# New Version: 2.0.0
# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --minor
# New Version: 1.3.0
# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --patch
# New Version: 1.2.4
# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --patch --tag=beta
# New Version: 1.2.4b0
# $ bumpver test '1.2.4b0' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --tag-num
# New Version: 1.2.4b1
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "build: bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
# use "bumpver update --major | minor | patch | tag=alpha|beta --dry" to test
# "pyproject.toml" = ['version = "{version}"']
"npblob/__init__.py" = ['__version__ = "{version}"']
"../typescript/package.json" = ['"version": "{version}"']

[tool.isort]
# use comment "# isort: skip" to skip line
# or use comment "# isort: off/on" to skip line blocks
line_length = 88
profile = "black"
src_paths = ["npblob", "tests"]

[tool.coverage.run]
branch = true
parallel = true
source = ["npblob"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: nocover"]

[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = [
  # "E203",  # whitespaces before ':'
  "E402", # imports not on top of file
  # "E501",  # line too long
  # "F821", # undefined name. Supress the bug that ruff doesn't support `t.Literal`
]
extend-select = ["I"]
target-version = "py38"

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.mypy]
check_untyped_defs = true
# disable_error_code = "call-arg"
ignore_missing_imports = true
show_error_codes = true
# use comment "type: ignore" to ignore single line
# use comment "type: ignore[error-code] to ignore single error"
