[project]
name = "npblob"
description = "Transfer numpy array between Python and JavaScript"
authors = [
  { name = "Leavers" },
  { name = "Leavers", email = "leavers930@gmail.com" },
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: JavaScript",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
keywords = ["data", "deep learning", "javascript", "ndarray", "numpy", "tensor"]
dependencies = ["numpy"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/leavers/npblob"
# documentation = "URL of documentation"
# changelog = "URL of changelog"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["npblob"]
excludes = ["examples", "tests"]

[tool.pdm.version]
source = "file"
path = "npblob/__init__.py"

[tool.coverage.run]
branch = true
parallel = true
source = ["npblob"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: nocover"]

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
target-version = "py311"
line-length = 88

[dependency-groups]
dev = [
  "autoflake>=2.3.3",
  "isort>=8.0.1",
  "ty>=0.0.21",
  "nox>=2026.2.9",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.5",
]
